logo images with global variables path

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 <header class="header">
     <section class="header__inner">
-        <a href="" class="logo">
-            <img src="" alt="" class="logo__img">
-        </a>
+        <a href="" class="logo"></a>
         <nav class="menu">
             <a href="" class="menu__item menu__item--active">Item 1</a>
             <a href="" class="menu__item">Item 2</a>
